--- a/Tarea Computacional.ipynb
+++ b/Tarea Computacional.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c5f2105941bc3d61f27b35c4f93032eb959167852dfe2cde3488ffd77b3de46f"
+  "signature": "sha256:7e25142c990ae71661a57c2c1999b86ee30737563c37135454dcca513e546835"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,24 +23,11 @@
      "prompt_number": 3
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "'''Se crean 7 funciones necesarias para el analisis de los datos:una para transponer los datos cuando son organizados de manera matrician matricial, una para multiplicar matrices, una para realizar descomposiciones de cholesky para matrices 2x2 y 3x3 ya que mayores ordenes para este caso no son necesarios,dos funciones para resolver sistemas trangular y triangular inferior y la funcion para reconocer ruido. El ruido se reconoce de la siguiente manera: se encuentra el maximo del conjunto de puntos y se observa si todos en eseintervalo del conjunto cumplen a condicion de que el anterior es menor y el siguiente es mayor, como se supone que se comporta una parabola si no lo hace entonces se toma como corrupto y la funcion retorna un 0, en caso de si cumplir la condicion retorna un 1.'''"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 7,
-       "text": [
-        "'Se crean 7 funciones necesarias para el analisis de los datos:una para transponer los datos cuando son organizados de manera matrician matricial, una para multiplicar matrices, una para realizar descomposiciones de cholesky para matrices 2x2 y 3x3 ya que mayores ordenes para este caso no son necesarios,dos funciones para resolver sistemas trangular y triangular inferior y la funcion para reconocer ruido. El ruido se reconoce de la siguiente manera: se encuentra el maximo del conjunto de puntos y se observa si todos en eseintervalo del conjunto cumplen a condicion de que el anterior es menor y el siguiente es mayor, como se supone que se comporta una parabola si no lo hace entonces se toma como corrupto y la funcion retorna un 0, en caso de si cumplir la condicion retorna un 1.'"
-       ]
-      }
-     ],
-     "prompt_number": 7
+     "source": [
+      "Se crean 7 funciones necesarias para el analisis de los datos: una para transponer los datos cuando son organizados de manera matrician matricial, una para multiplicar matrices, una para realizar descomposiciones de cholesky para matrices 2x2 y 3x3 ya que mayores ordenes para este caso no son necesarios,dos funciones para resolver sistemas trangular y triangular inferior y la funcion para reconocer ruido. El ruido se reconoce de la siguiente manera: se encuentra el maximo del conjunto de puntos y se observa si todos en eseintervalo del conjunto cumplen a condicion de que el anterior es menor y el siguiente es mayor, como se supone que se comporta una parabola si no lo hace entonces se toma como corrupto y la funcion retorna un 0, en caso de si cumplir la condicion retorna un 1."
+     ]
     },
     {
      "cell_type": "code",
@@ -125,24 +112,11 @@
      "prompt_number": 8
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "'''En el zip que se descarga de git junto con este programa hay una capeta con el nombre \"ls Brahe-3141-f\" entonces se usa Unix para encontrar la  carpeta y hacer una lista con el nombre de los archivos que contiene. Se abre cada archivo y se hace un array con los valores de posicion que da el arhivo y una matriz con informacion del tiempo, despues se toma ese array de posciones y se evalua la funcion que se encarga de buscar si es corrupto, si lo es se pasa al siguiente archivo,si no lo es se toma la matriz de tiempo, se transpone y se multiplica por ella al array de poscion como si este fuera un vector y tambien la matriz de tiempo original se multiplica por su transpuesta. Esto deja un sistem 3x3 simetrico entonces se usa la descomposicon de cholesky para simplificar todo en dos matrices trinagulo superior e inferior. Se usan las dos rutinas obtenidas para resolver esas dos matrices y se obtienen los parametros que mas se ajusta, los cuales se esciben en un arhivo junto con los angulos y la gravedad y el angulo theta se guardan en dos array para ser usados despues.Al tener todos las gravedas se hace otro array con las fluctuaciones.'''"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 22,
-       "text": [
-        "'En el zip que se descarga de git junto con este programa hay una capeta con el nombre \"ls Brahe-3141-f\" entonces se usa Unix para encontrar la  carpeta y hacer una lista con el nombre de los archivos que contiene. Se abre cada archivo y se hace un array con los valores de posicion que da el arhivo y una matriz con informacion del tiempo, despues se toma ese array de posciones y se evalua la funcion que se encarga de buscar si es corrupto, si lo es se pasa al siguiente archivo,si no lo es se toma la matriz de tiempo, se transpone y se multiplica por ella al array de poscion como si este fuera un vector y tambien la matriz de tiempo original se multiplica por su transpuesta. Esto deja un sistem 3x3 simetrico entonces se usa la descomposicon de cholesky para simplificar todo en dos matrices trinagulo superior e inferior. Se usan las dos rutinas obtenidas para resolver esas dos matrices y se obtienen los parametros que mas se ajusta, los cuales se esciben en un arhivo junto con los angulos y la gravedad y el angulo theta se guardan en dos array para ser usados despues.Al tener todos las gravedas se hace otro array con las fluctuaciones.'"
-       ]
-      }
-     ],
-     "prompt_number": 22
+     "source": [
+      "En el zip que se descarga de git junto con este programa hay una capeta con el nombre \"ls Brahe-3141-f\" entonces se usa Unix para encontrar la  carpeta y hacer una lista con el nombre de los archivos que contiene. Se abre cada archivo y se hace un array con los valores de posicion que da el arhivo y una matriz con informacion del tiempo, despues se toma ese array de posciones y se evalua la funcion que se encarga de buscar si es corrupto, si lo es se pasa al siguiente archivo,si no lo es se toma la matriz de tiempo, se transpone y se multiplica por ella al array de poscion como si este fuera un vector y tambien la matriz de tiempo original se multiplica por su transpuesta. Esto deja un sistem 3x3 simetrico entonces se usa la descomposicon de cholesky para simplificar todo en dos matrices trinagulo superior e inferior. Se usan las dos rutinas obtenidas para resolver esas dos matrices y se obtienen los parametros que mas se ajusta, los cuales se esciben en un arhivo junto con los angulos y la gravedad y el angulo theta se guardan en dos array para ser usados despues.Al tener todos las gravedas se hace otro array con las fluctuaciones."
+     ]
     },
     {
      "cell_type": "code",
@@ -187,24 +161,11 @@
      "outputs": []
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "'''Rutina que hace la grafica gravedad con angulo'''"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 23,
-       "text": [
-        "'Rutina que hace la grafica gravedad con angulo'"
-       ]
-      }
-     ],
-     "prompt_number": 23
+     "source": [
+      "Rutina que hace la grafica gravedad con angulo."
+     ]
     },
     {
      "cell_type": "code",
@@ -223,24 +184,11 @@
      "prompt_number": 15
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "'''Rutina que hace la grafica las fluctuaciones con angulo'''"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 24,
-       "text": [
-        "'Rutina que hace la grafica las fluctuaciones con angulo'"
-       ]
-      }
-     ],
-     "prompt_number": 24
+     "source": [
+      "Rutina que hace la grafica las fluctuaciones con angulo."
+     ]
     },
     {
      "cell_type": "code",
@@ -258,24 +206,11 @@
      "prompt_number": 16
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "'''Se crea dos matrices, cada una en relacion a uno de los dos modelos, para el modelo uno esta Matriz_fluctuaciones_1 y para el modelo dos esta  Matriz_fluctuaciones_2. Se repite el procedimiento de minimos cuadrados para las dos y se obtiene los respectivos coeficientes que mas se ajustan a cada modelo'''"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 26,
-       "text": [
-        "'Se crea dos matrices, cada una en relacion a uno de los dos modelos, para el modelo uno esta Matriz_fluctuaciones_1 y para el modelo dos esta  Matriz_fluctuaciones_2. Se repite el procedimiento de minimos cuadrados para las dos y se obtiene los respectivos coeficientes que mas se ajustan a cada modelo'"
-       ]
-      }
-     ],
-     "prompt_number": 26
+     "source": [
+      "Se crea dos matrices, cada una en relacion a uno de los dos modelos, para el modelo uno esta Matriz_fluctuaciones_1 y para el modelo dos esta  Matriz_fluctuaciones_2. Se repite el procedimiento de minimos cuadrados para las dos y se obtiene los respectivos coeficientes que mas se ajustan a cada modelo."
+     ]
     },
     {
      "cell_type": "code",
@@ -318,24 +253,11 @@
      "prompt_number": 17
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "'''Se usa el modelo para obtener los valores de fluctuaciones y se encuentra el porcentaje de error promedio entre el modelo y la realidad'''"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 28,
-       "text": [
-        "'Se usa el modelo para obtener los valores de fluctuaciones y se encuentra el porcentaje de error entre el modelo y la realidad'"
-       ]
-      }
-     ],
-     "prompt_number": 28
+     "source": [
+      "Se usa el modelo para obtener los valores de fluctuaciones y se encuentra el porcentaje de error promedio entre el modelo y la realidad."
+     ]
     },
     {
      "cell_type": "code",
@@ -378,32 +300,11 @@
      "prompt_number": 19
     },
     {
-     "cell_type": "code",
-     "collapsed": true,
-     "input": [
-      "'''Observando los resutados el modelo dos se ajusta mejor que modelo 1 ya que su porcentaje de error promedio es menor'''"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 29,
-       "text": [
-        "'Observando los resutados el modelo dos se ajusta mejor que modelo 1 ya que su porcentaje de error promedio es menor'"
-       ]
-      }
-     ],
-     "prompt_number": 29
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "source": [
+      "Observando los resutados el modelo dos se ajusta mejor que modelo 1 ya que su porcentaje de error promedio es menor"
+     ]
     },
     {
      "cell_type": "code",
